--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@ $baseurl: '{{ site.baseurl }}/images';
 @import 'libs/mixins';
 @import 'font-awesome.min.css';
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
 /*
 	Spectral by HTML5 UP
@@ -92,7 +93,7 @@ $baseurl: '{{ site.baseurl }}/images';
 	}
 
 	p {
-		font-family: 'Roboto', sans-serif !important; 
+		font-family: 'Roboto', sans-serif !important;
 		margin: 0 0 _size(element-margin) 0;
 	}
 
