--- a/css/main.scss
+++ b/css/main.scss
@@ -1302,7 +1302,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		@include vendor('transform', 'translateX(20em)');
 		@include vendor('transition', 'transform #{_duration(menu)} ease');
 		-webkit-overflow-scrolling: touch;
-		background: _palette(accent1, bg);
+		background: #FFF;
 		color: _palette(accent1, fg-bold);
 		height: 100%;
 		max-width: 80%;
@@ -1331,7 +1331,7 @@ $baseurl: '{{ site.baseurl }}/images';
 
 				> a {
 					border: 0;
-					color: inherit;
+					color: #333;
 					display: block;
 					font-size: 0.8em;
 					letter-spacing: _size(letter-spacing-alt);
