--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,8 @@
     <ul>
       <li class="special">
         <a href="#menu" class="menuToggle"><span>Menu</span></a>
-        <div id="menu">
-          <ul>
+        <div id="menu" style="background:#FFF;">
+          <ul style="color:#333;">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">Projects</a></li>
             <li><a href="index.html">Contact</a></li>
