changed to rgba

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <ul>
       <li class="special">
         <a href="#menu" class="menuToggle"><span>Menu</span></a>
-        <div id="menu" style="background:#FFF;">
+        <div id="menu" style="background:rgba(255, 255, 255, 0.65);">
           <ul style="color:#333;">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html">Projects</a></li>
