--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,8 @@
         <div id="menu" style="background:rgba(255, 255, 255, 0.65);">
           <ul style="color:#333;">
             <li><a href="index.html">Home</a></li>
-            <li>Projects</li>
-            <li><a href="#3d">3D Models</a></li>
-            <li><a href="#cad">CAD Models</a></li>
-            <li><a href="#gd">Graphic Design</a></li>
-            <li><a href="#wd">Web Design</a></li>
-            <li><a href="#three">Contact</a></li>
+            <li><a href="index.html">Projects</a></li>
+            <li><a href="index.html">Contact</a></li>
           </ul>
         </div>
       </li>
