--- a/css/main.scss
+++ b/css/main.scss
@@ -1841,3 +1841,19 @@ $baseurl: '{{ site.baseurl }}/images';
 			}
 		}
 	}
+
+  .sketchfab-embed-wrapper {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.sketchfab-embed-wrapper iframe, .sketchfab-embed-wrapper object, .sketchfab-embed-wrapper embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
